sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var nontri?:Boolean= true 
  while (test) {
    var ech:Int=0
    for (i<-0 to (getNombreValeurs()-2)){
      if (plusPetit( getValeur(i+1), getValeur(i))) {
        echange(i, (i+1))
        ech = (ech +1) }}
    if (ech==0) {nontri?=false}
  }  
}